scripts/nullaway/annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8.txt
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:153: error: [NullAway] dereferenced expression bestSegment is @Nullable
			antibody[offset + i] = bestSegment[i];
			                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinGA.java:110: error: [NullAway] passing @Nullable parameter 'antibodies' where @NonNull is required
				GeneticMatchResult result = fitnessFunction.findBestGeneticMatch(antigen, antibodies);
				                                                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:201: error: [NullAway] dereferenced expression currentCounter is @Nullable
      fitnessValues[i] = currentCounter.getFitnessValue();
                                       ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
